# tbdynamics

./: .gitattributes  .gitignore  README.md  baseline.ipynb  calib_one.ipynb  calibrate.ipynb  calibration.ipynb  covid_scenarios.ipynb  detection_scenarios.ipynb  explore.ipynb  find_map.ipynb  generate_data.ipynb  matrix.ipynb  model_no_organ_strat.ipynb  model_run.ipynb  model_run_with_strat.ipynb  model_with_pop.ipynb  optimise.ipynb  pop_jt.ipynb  pyproject.toml  quantile_covid_outputs.pkl  requirements.txt  scenarios.ipynb  setup.py  simple_calib.ipynb  single_run.ipynb  spaghettis.ipynb
data/: camau.csv  camau_cdr.csv  data.csv  immi.csv
data/inputs/: immi.csv  vn_birth.csv
data/outputs/: covid_diff_quantiles.pkl  inference_data.nc  inference_data1.nc  notif_for_covid_with_ll.pkl  scenarios_diff_outputs.pkl
emutools/: calibration.py  parameters.py  plotting.py  tex.py
general_utils/: calibration_utils.py  doc_utils.py  parameter_utils.py  tex_utils.py
notebooks/: baseline.ipynb  build_model.ipynb  calibrate.ipynb  covid_and_scenarios.ipynb  generate_data.ipynb  generate_idata.ipynb  matrix.ipynb  optimise.ipynb  posteriors.ipynb  scenarios.ipynb  spaghettis.ipynb
notebooks/camau/: act3_mixing.ipynb  baseline.ipynb  build_model.ipynb  calibrate.ipynb  generate_data.ipynb  idata_extracted.nc  (+6 more)
supplement/: tb.bib
tbdynamics/: __init__.py  calib_utils.py  calibration.py  constants.py  inputs.py  model.py  outputs.py  params.yml  plots.py  plotting.py  pop.ipynb  settings.py  targets.yml  utils.py
tests/: test_calibrate.py  test_calibrate_with_configs.py
(+54 files in other folders)
