[tool.poetry]
name = "tbdynamics"
version = "0.1.0"
description = "Mathematical modelling of TB in Vietnam"
authors = ["Long Bui"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
summerepi2 = "1.3.4"
estival = "0.4.9"
tables = "3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
