[tool.poetry]
name = "tbdynamics"
version = "0.1.0"
description = "Mathematical modelling of TB in Vietnam"
authors = ["Long Bui", "James Trauer"]
license = "BSD-2-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
ipython = ">=7.23.1"
summerepi2 = "1.3.4"
estival = "0.4.9"
tables = ">=3"
jax = "0.4.24"
jaxlib = "0.4.24"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"